added properties files to gitignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=brenobaise
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+# if you are trying to use auto generated ddl, remove the _ from import.sql located at ./resources
+# ddl generate is now disabled due to the usage of Flyway for database migrations.
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
