--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+src/main/resources/application.properties
+src/main/resources/flyway.properties
 ### STS ###
 .apt_generated
 .classpath
