Added afterMigrate.sql for populating the tests database, created a v1 migration script of inital database set up, renamed some column names at the entity classes

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 src/main/resources/application.properties
-src/main/resources/flyway.properties
+flyway.conf
 ### STS ###
 .apt_generated
 .classpath
